--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 <html>
   <head>
     <title> Tango for Dummies </title>
+    <link rel="stylesheet" type="text/css" href="client/dist/mystyle.css">
   </head>
 
   <body>
+ 
     <div id='app'></div>
   </body>
   <script src='client/dist/bundle.js'></script>
