5/16 bootstrap refactor; mostly working

--- a/client/flowchart.html
+++ b/client/flowchart.html
@@ -22,11 +22,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tango for Dummies</a>
+          <a class="navbar-brand" href="..">Tango for Dummies</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="..">Home</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
             <li class="dropdown">
@@ -47,10 +47,10 @@
     </nav>
 
 
-    
+    <div id='app'></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>  
   </body>
-  <!--<script src='client/dist/bundle.js'></script>-->
+  <script src='client/dist/bundle.js'></script>
 
 </html>
