--- a/client/followers_starter.html
+++ b/client/followers_starter.html
@@ -30,7 +30,7 @@
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Useful Info<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="flowchart">Tango Flowchart</a></li>
                 <li><a href="leaders-starter">Leaders' Starter Guide</a></li>
@@ -122,13 +122,13 @@ like how electrons can only flow in a complete circuit.  </code></pre>
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>The lame jokes included on this page has no relationship with how serious I am about tango. </p>
+            <p>The lame jokes included on this page has no relation to how serious I am about tango. </p>
           </div>
         
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
             <ol class="list-unstyled">
-              <li><a href="https://www.mirabarakat.com/">Mira Barakat Argentine Tango</a></li>
+              <li><a href="https://www.mirabarakat.com/" target="_blank">Mira Barakat Tango</a></li>
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
@@ -137,7 +137,7 @@ like how electrons can only flow in a complete circuit.  </code></pre>
 
     </div><!-- /.container -->
 
-    <footer class="blog-footer">
+    <footer class="blog-footer col-sm-8">
       <p>
         <a href="#">Back to top</a>
       </p>
