--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Useful Info<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="flowchart">Tango Flowchart</a></li>
                 <li><a href="leaders-starter">Leaders' Starter Guide</a></li>
